k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  type: ClusterIP 
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
